# mqtt-playground

./: .gitignore  README.md  publish_multiple.py  publish_single.py  pyproject.toml  requirements.txt
cloudmqtt/: sample.py
funciona/: client.py  generate.py
iot_stack/: README.md  iot_stack.yml  iot_stack_mongodb_influx.yml
mqtt-funcionando/: README.md  client.py  msg_generator.py
mqtt/cloudmqtt/: LM75_temp_pub.py  README.md  random_reading.py
outros/: docker-compose.yml
sensors/m5stack/: PTH-Esp32-M5Stick.ino
sensors/m5stack/ENV/: ENV.ino
sensors/raspberry/: LM75.py
sensors/raspberry/LM75 temp sensor/: lm75.sh
